--- a/form.html
+++ b/form.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1 style="text-align: center;">This is HTML form</h1>
-    <legend>Application form
+    <fieldset>
+    <legend>Application form</legend>
     <div style="margin-left: 25%;">
     <form action="backend.php">
         <div>
@@ -60,6 +61,6 @@
         </div>
     </form>
 </div>
-</legend>
+</fieldset>
 </body>
 </html>
