Working n my project

--- a/Project/finalproject.html
+++ b/Project/finalproject.html
@@ -16,10 +16,75 @@
             <div class="icon" style="background-color: black">
                 <h2 class="logo"></h2>
                 <img src="./Vector.svg" alt="logo">
-                <p class="test">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, saepe quidem nam nobis quo atque
-                    expedita obcaecati adipisci quasi? Corrupti ut cupiditate necessitatibus at non cum! Pariatur
-                    numquam optio fugiat?</p>
+                <img src="./proudcloud.svg" alt="logo">
+                <ul>
+                    <li>Hosting</li>
+                    <li>Domain</li>
+                    <li>Website</li>
+                    <li>Pricing</li>
+                    <li>Affiliate</li>
+                </ul>
+                <button>Sign in</button>
+                <h2>Fast & Unlimited Web Hosting</h2>
+                <p class="test">The best web hosting service with the most complete hosting features and 24-hour support for your business convenience</p>
+                <div>
+                <button>Get Started</button>
+                </div>
+                <img src="./header.svg" alt="">
+                <!-- <img src="./product_card.svg" alt=""> -->
+                <div>
+                <img src="./illustration.svg" alt="">
+                <h3>Web Hosting</h3>
+                <p>Basic web hosting plans</p>
+                <p>Starting at</p>
+                <div>
+                    <span>$9.99</span><span>/mo</span>
+                </div>
+                <button>See Features</button>
+                </div>
+
+                <div>
+                    <img src="./Group 174.svg" alt="">
+                    <h3>Cloud Hosting</h3>
+                    <p>High performance cloud platform ever</p>
+                    <p>Starting at</p>
+                    <div>
+                        <span>$6.99</span><span>/mo</span>
+                    </div>
+                    <button>See Features</button>
+                </div>
+
+                <div>
+                        <img src="Group.svg" alt="">
+                        <h3>VPS Hosting</h3>
+                        <p>The ideal solution for corporate
+                            sites and larger blogs</p>
+                        <p>Starting at</p>
+                        <div>
+                            <span>$13.99</span><span>/mo</span>
+                        </div>
+                        <button>See Features</button>
+                </div>
+
+                <div>
+                    <img src="./ilustration.svg" alt="">
+                    <h3>Wordpress Hosting</h3>
+                    <p>Optimized for WordPress sites</p>
+                    <p>Starting at</p>
+                    <div>
+                        <span>$11.99</span><span>/mo</span>
+                    </div>
+                    <button>See Features</button>
+                </div>
+                <img src="./performance_isometric.svg" alt="">
             </div>
+            <h4>Load Fast your Site</h4>
+            <p>Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>
+            <h4>DDoS Protection</h4>
+            <p>Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>
+            <img src="./secure_isometric.svg" alt="">
+            <br>
+            <img src="./support_isometric.svg" alt="">
 
         </div>
 
