--- a/Project/finalproject.html
+++ b/Project/finalproject.html
@@ -85,7 +85,24 @@
             <img src="./secure_isometric.svg" alt="">
             <br>
             <img src="./support_isometric.svg" alt="">
-
+            <h4>24/7 Support</h4>
+            <p>Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>
+            <h5>Our Customers Say</h5>
+            <img src="./“.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+            <h6>Eda Nakamoto</h6>
+            <img src="./“.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+            <h6>Joel Miller</h6>
+            <img src="./“.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+            <h6>John Nichole</h6>
+            <h5>30 Days Money Back Guarantee</h5>
+            <p>If you are not satisfied with the services offered, we will 
+                refund your money. Unconditional!</p>
+            <button>Get Started</button>
+            <img src="./social&logo.svg" alt="">
+            <img src="./form.svg" alt="">
         </div>
 
     </div>
