Updating project file of index.html and index.css

--- a/Project/finalproject.html
+++ b/Project/finalproject.html
@@ -13,9 +13,9 @@
 <body>
     <div class="main">
         <div class="navbar">
-            <div class="icon" style="background-color: black">
+            <div class="icon">
                 <h2 class="logo"></h2>
-                <img src="./Vector.svg" alt="logo">
+                <img src="./Frame.svg" alt="logo">
                 <img src="./proudcloud.svg" alt="logo">
                 <ul>
                     <li>Hosting</li>
@@ -24,6 +24,7 @@
                     <li>Pricing</li>
                     <li>Affiliate</li>
                 </ul>
+                <img src="./Layer 2.svg" alt="cart">
                 <button>Sign in</button>
                 <h2>Fast & Unlimited Web Hosting</h2>
                 <p class="test">The best web hosting service with the most complete hosting features and 24-hour support for your business convenience</p>
