Added code to the project

--- a/Project/index.html
+++ b/Project/index.html
@@ -29,13 +29,29 @@
     </div>
     <div class="container"> 
         <section class="header">
-            <div style="z-index: 1;">
+            <div style="z-index: 1; height: 384px;">
                 <h1>Fast & Unlimited Web Hosting</h1>
                 <p class="header-body">The best web hosting service with the most complete hosting features and 24-hour support for your business convenience</p>
+                <button class="get-started-btn">Get Started</button>
             </div>
             <div style="position: absolute; right: 60px;">
                 <img src="./images/header.svg" alt="header">
             </div>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards">
+            <div class="card-1">
+                <img src="./images/illustration.svg" alt="blocks">
+                <p class="card-1-style">Web Hosting</p>
+                <p style="size: 14px; margin-bottom: 50px;">Basic web hosting plans</p>
+                <p style="font-weight: 400; height: 50px;">Starting at</p>
+                <span style="font-size: 36px; font-weight: 700; height: 40px; margin-bottom: 150px;">$9.99</span><span style="font-weight: 400px; font-size: 16px; margin-bottom: 150px;"> /mo</span>
+                <p><button class="card-1-btn">See Features</button></p> 
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
         </section>
     </div>
 </body>
