Removed inline css and added to external css

--- a/Project/index.html
+++ b/Project/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>proudcloud</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -29,29 +29,52 @@
     </div>
     <div class="container"> 
         <section class="header">
-            <div style="z-index: 1; height: 384px;">
+            <div class="header-div-1">
                 <h1>Fast & Unlimited Web Hosting</h1>
                 <p class="header-body">The best web hosting service with the most complete hosting features and 24-hour support for your business convenience</p>
                 <button class="get-started-btn">Get Started</button>
             </div>
-            <div style="position: absolute; right: 60px;">
+            <div class="header-div-2">
                 <img src="./images/header.svg" alt="header">
             </div>
         </section>
     </div>
+    
     <div class="container">
         <section class="cards">
             <div class="card-1">
                 <img src="./images/illustration.svg" alt="blocks">
                 <p class="card-1-style">Web Hosting</p>
-                <p style="size: 14px; margin-bottom: 50px;">Basic web hosting plans</p>
-                <p style="font-weight: 400; height: 50px;">Starting at</p>
-                <span style="font-size: 36px; font-weight: 700; height: 40px; margin-bottom: 150px;">$9.99</span><span style="font-weight: 400px; font-size: 16px; margin-bottom: 150px;"> /mo</span>
+                <p class="card-style">Basic web hosting plans</p>
+                <p class="section-p">Starting at</p>
+                <span class="section-span-1">$9.99</span><span class="section-span-2"> /mo</span>
                 <p><button class="card-1-btn">See Features</button></p> 
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="card-1">
+                <img src="./images/illustration.svg" alt="blocks">
+                <p class="card-1-style">Cloud Hosting</p>
+                <p class="card-style">High performance cloud platform ever</p>
+                <p class="section-p">Starting at</p>
+                <span class="section-span-1">$6.99</span><span class="section-span-2"> /mo</span>
+                <p><button class="card-1-btn">See Features</button></p>
+            </div>
+            <div class="card-1">
+                <img src="./images/illustration.svg" alt="blocks">
+                <p class="card-1-style">VPS Hosting</p>
+                <p class="card-style">The ideal solution for corporate
+                    sites and larger blogs</p>
+                <p class="section-p">Starting at</p>
+                <span class="section-span-1">$13.99</span><span class="section-span-2"> /mo</span>
+                <p><button class="card-1-btn">See Features</button></p>
+            </div>
+            <div class="card-1">
+                <img src="./images/illustration.svg" alt="blocks">
+                <p class="card-1-style">Wordpress Hosting</p>
+                <p class="card-style">Optimized for WordPress sites</p>
+                <p class="section-p">Starting at</p>
+                <span class="section-span-1">$11.99</span><span class="section-span-2"> /mo</span>
+                <p><button class="card-1-btn">See Features</button></p>
+            </div>
         </section>
     </div>
 </body>
