--- a/Project/index.html
+++ b/Project/index.html
@@ -27,11 +27,12 @@
             </ul>
         </nav>
     </div>
-    <div class="container"> 
+    <div class="container">
         <section class="header">
             <div class="header-div-1">
                 <h1>Fast & Unlimited Web Hosting</h1>
-                <p class="header-body">The best web hosting service with the most complete hosting features and 24-hour support for your business convenience</p>
+                <p class="header-body">The best web hosting service with the most complete hosting features and 24-hour
+                    support for your business convenience</p>
                 <button class="get-started-btn">Get Started</button>
             </div>
             <div class="header-div-2">
@@ -39,42 +40,141 @@
             </div>
         </section>
     </div>
-    
-    <div class="container">
+
+    <div class="container position">
         <section class="cards">
-            <div class="card-1">
-                <img src="./images/illustration.svg" alt="blocks">
-                <p class="card-1-style">Web Hosting</p>
-                <p class="card-style">Basic web hosting plans</p>
-                <p class="section-p">Starting at</p>
-                <span class="section-span-1">$9.99</span><span class="section-span-2"> /mo</span>
-                <p><button class="card-1-btn">See Features</button></p> 
+            <div class="feature-cards">
+                <div class="feature-card">
+                    <img src="./images/illustration.svg" alt="blocks"class="feature-card-icon">
+                    <p class="card-1-style">Web Hosting</p>
+                    <p class="card-style card-info">Basic web hosting plans</p>
+                    <p class="section-p">Starting at</p>
+                    <p class="feature-amount">
+                        <span class="feature-price">$9.99</span>
+                        <span class="feature-price-duration"> /mo</span>
+                    </p>
+                    <div class="feature-btn-wrapper"><button class="feature-btn">See Features</button></div>
+                </div>
+                <div class="feature-card">
+                    <img src="./images/rocket.svg" alt="blocks" class="feature-card-icon">
+                    <p class="card-1-style">Cloud Hosting</p>
+                    <p class="card-style card-info">High performance cloud platform ever</p>
+                    <p class="section-p">Starting at</p>
+                    <p class="feature-amount">
+                        <span class="feature-price">$6.99</span>
+                        <span class="feature-price-duration"> /mo</span>
+                    </p>
+                    <div class="feature-btn-wrapper"><button class="feature-btn">See Features</button></div>
+                </div>
+                <div class="feature-card">
+                    <img src="./images/box.svg" alt="blocks" class="feature-card-icon">
+                    <p class="card-1-style">VPS Hosting</p>
+                    <p class="card-style card-info">The ideal solution for corporate
+                        sites and larger blogs</p>
+                    <p class="section-p">Starting at</p>
+                    <p class="feature-amount">
+                        <span class="feature-price">$13.99</span>
+                        <span class="feature-price-duration"> /mo</span>
+                    </p>
+                    <div class="feature-btn-wrapper"><button class="feature-btn">See Features</button></div>
+                </div>
+                <div class="feature-card  wordpress">
+                    <img src="./images/blocks.svg" alt="blocks" class="feature-card-icon">
+                    <p class="card-1-style">Wordpress Hosting</p>
+                    <p class="card-style card-info">Optimized for WordPress sites</p>
+                    <p class="section-p">Starting at</p>
+                    <p class="feature-amount">
+                        <span class="feature-price">$11.99</span>
+                        <span class="feature-price-duration"> /mo</span>    
+                    </p>
+                    <div class="feature-btn-wrapper"><button class="feature-btn">See Features</button></div>
+                </div>
             </div>
-            <div class="card-1">
-                <img src="./images/illustration.svg" alt="blocks">
-                <p class="card-1-style">Cloud Hosting</p>
-                <p class="card-style">High performance cloud platform ever</p>
-                <p class="section-p">Starting at</p>
-                <span class="section-span-1">$6.99</span><span class="section-span-2"> /mo</span>
-                <p><button class="card-1-btn">See Features</button></p>
+        </section>
+    </div>
+    <div class="container">
+        <section class="heading-1">
+            <img src="./images/performance_isometric.svg" alt="">
+            <div class="div-1">
+                <p class="header-1">Load Fast your Site</p>
+                <p class="para-1">Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>    
             </div>
-            <div class="card-1">
-                <img src="./images/illustration.svg" alt="blocks">
-                <p class="card-1-style">VPS Hosting</p>
-                <p class="card-style">The ideal solution for corporate
-                    sites and larger blogs</p>
-                <p class="section-p">Starting at</p>
-                <span class="section-span-1">$13.99</span><span class="section-span-2"> /mo</span>
-                <p><button class="card-1-btn">See Features</button></p>
+        </section>
+    </div>
+    <div class="container">
+        <section class="heading-2">
+            <div class="div-2">
+                <p class="header-2">DDoS Protection</p>
+                <p class="para-2">Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>
             </div>
-            <div class="card-1">
-                <img src="./images/illustration.svg" alt="blocks">
-                <p class="card-1-style">Wordpress Hosting</p>
-                <p class="card-style">Optimized for WordPress sites</p>
-                <p class="section-p">Starting at</p>
-                <span class="section-span-1">$11.99</span><span class="section-span-2"> /mo</span>
-                <p><button class="card-1-btn">See Features</button></p>
+            <img src="./images/secure_isometric.svg" alt="">
+        </section>
+    </div>
+    <div class="container">
+        <section class="heading-1">
+            <img src="./images/performance_isometric.svg" alt="">
+            <div class="div-1">
+                <p class="header-1">24/7 Support</p>
+                <p class="para-1">Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>    
             </div>
+        </section>
+    </div>
+    <div class="container">
+        <p class="cstm">Our Customers Say</p>
+    </div>
+    <div class="container">
+        <section >
+            <div class="heading-3">
+                <div class="page">
+                    <img class="img-3" src="./images/parallel.svg" alt="">
+                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+                    <p class="cstm-name">Eda Nakamoto</p>
+                </div>
+                <div class="page">
+                    <img class="img-3" src="./images/parallel.svg" alt="">
+                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+                    <p class="cstm-name">Joel Miller</p>
+                </div>
+                <div class="page">
+                    <img class="img-3" src="./images/parallel.svg" alt="">
+                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+                    <p class="cstm-name">John Nichole</p>
+                </div>
+            </div>
+            <div class="slider">
+                <img  src="./images/slider.svg" alt="">
+            </div>
+        </section>
+    </div>
+    <div class="container">
+        <div class="refund">
+            <p class="money-back">30 Days Money Back Guarantee</p>
+            <p class="unconditional">If you are not satisfied with the services offered, we will 
+                refund your money. Unconditional!</p>
+            <p class="last-btn"><button class="get-started-btn">Get Started</button></p>
+        </div>
+    </div>
+    <div class="container">
+        <section class="footer">
+        <div>
+        <img class="footer-logo" src="./images/footerlogo.svg" alt="">
+        </div>
+        <div>
+            <img class="youtube-logo" src="./images/Group 27.svg" alt="">
+        </div>
+        <div>
+            <img class="twitter-logo" src="./images/Vector (1).svg" alt="">
+        </div>
+        <div>
+            <img class="instagram-logo" src="./images/Group 28.svg" alt="">
+        </div>
+        <div>
+            <img class="fb-logo" src="./images/fb icon.svg" alt="">
+        </div>
+        <div>
+            <p>Sign up Newsletter</p>
+            <input type="email" placeholder="Enter Email"></input>
+        </div>
         </section>
     </div>
 </body>
