--- a/Project/index.html
+++ b/Project/index.html
@@ -8,6 +8,7 @@
     <title>proudcloud</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 
 <body>
@@ -154,7 +155,7 @@
             <p class="last-btn"><button class="get-started-btn">Get Started</button></p>
         </div>
     </div>
-    <div class="container">
+    <div class="container footer-adjustment">
         <section class="footer">
         <div>
         <img class="footer-logo" src="./images/footerlogo.svg" alt="">
@@ -171,9 +172,12 @@
         <div>
             <img class="fb-logo" src="./images/fb icon.svg" alt="">
         </div>
-        <div>
-            <p>Sign up Newsletter</p>
-            <input type="email" placeholder="Enter Email"></input>
+        <div class="input-field">
+            <p class="signup">Sign up Newsletter</p>
+            <div class="email-submit">
+            <input class="email" type="email" placeholder="Enter Email"></input>
+            <button class="submit">Submit</button>
+            </div>
         </div>
         </section>
     </div>
