--- a/Project/index.html
+++ b/Project/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <nav>
+        <nav class="navigate">
             <ul class="header-logo-section">
                 <li class="navigate"><img src="./images/logo.svg" alt="logo"></li>
                 <li class="navigation">Domain</li>
@@ -36,9 +36,9 @@
                     support for your business convenience</p>
                 <button class="get-started-btn">Get Started</button>
             </div>
-            <div class="header-div-2">
-                <img src="./images/header.svg" alt="header">
-            </div>
+            <!-- <div class="header-div-2">
+                <img src="./images/header.svg" class="header-div-2-1" alt="header">
+            </div> -->
         </section>
     </div>
 
@@ -46,7 +46,7 @@
         <section class="cards">
             <div class="feature-cards">
                 <div class="feature-card">
-                    <img src="./images/illustration.svg" alt="blocks"class="feature-card-icon">
+                    <img src="./images/illustration.svg" alt="blocks" class="feature-card-icon">
                     <p class="card-1-style">Web Hosting</p>
                     <p class="card-style card-info">Basic web hosting plans</p>
                     <p class="section-p">Starting at</p>
@@ -86,7 +86,7 @@
                     <p class="section-p">Starting at</p>
                     <p class="feature-amount">
                         <span class="feature-price">$11.99</span>
-                        <span class="feature-price-duration"> /mo</span>    
+                        <span class="feature-price-duration"> /mo</span>
                     </p>
                     <div class="feature-btn-wrapper"><button class="feature-btn">See Features</button></div>
                 </div>
@@ -95,10 +95,12 @@
     </div>
     <div class="container">
         <section class="heading-1">
-            <img src="./images/performance_isometric.svg" alt="">
+            <img src="./images/performance_isometric.svg" class="heading-1-img" alt="">
             <div class="div-1">
                 <p class="header-1">Load Fast your Site</p>
-                <p class="para-1">Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>    
+                <p class="para-1">Managing is difficult work. Indeed harder on the off chance that you do not utilize
+                    computer program or have work spread over as well numerous devices. It's simple to lose track of all
+                    the extreme to remain up to date.</p>
             </div>
         </section>
     </div>
@@ -106,17 +108,21 @@
         <section class="heading-2">
             <div class="div-2">
                 <p class="header-2">DDoS Protection</p>
-                <p class="para-2">Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>
+                <p class="para-2">Managing is difficult work. Indeed harder on the off chance that you do not utilize
+                    computer program or have work spread over as well numerous devices. It's simple to lose track of all
+                    the extreme to remain up to date.</p>
             </div>
-            <img src="./images/secure_isometric.svg" alt="">
+            <img src="./images/secure_isometric.svg" class="heading-2-img" alt="">
         </section>
     </div>
     <div class="container">
         <section class="heading-1">
-            <img src="./images/performance_isometric.svg" alt="">
+            <img src="./images/support_isometric.svg" class="header-1-image" alt="">
             <div class="div-1">
                 <p class="header-1">24/7 Support</p>
-                <p class="para-1">Managing is difficult work. Indeed harder on the off chance that you do not utilize computer program or have work spread over as well numerous devices. It's simple to lose track of all the extreme to remain up to date.</p>    
+                <p class="para-1">Managing is difficult work. Indeed harder on the off chance that you do not utilize
+                    computer program or have work spread over as well numerous devices. It's simple to lose track of all
+                    the extreme to remain up to date.</p>
             </div>
         </section>
     </div>
@@ -124,63 +130,65 @@
         <p class="cstm">Our Customers Say</p>
     </div>
     <div class="container">
-        <section >
+        <section>
             <div class="heading-3">
                 <div class="page">
                     <img class="img-3" src="./images/parallel.svg" alt="">
-                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus
+                        scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl.
+                        Sed sit cursus vulputate dignissim. </p>
                     <p class="cstm-name">Eda Nakamoto</p>
                 </div>
                 <div class="page">
                     <img class="img-3" src="./images/parallel.svg" alt="">
-                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus
+                        scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl.
+                        Sed sit cursus vulputate dignissim. </p>
                     <p class="cstm-name">Joel Miller</p>
                 </div>
                 <div class="page">
                     <img class="img-3" src="./images/parallel.svg" alt="">
-                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl. Sed sit cursus vulputate dignissim. </p>
+                    <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus
+                        scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl.
+                        Sed sit cursus vulputate dignissim. </p>
                     <p class="cstm-name">John Nichole</p>
                 </div>
             </div>
             <div class="slider">
-                <img  src="./images/slider.svg" alt="">
+                <img src="./images/slider.svg" alt="">
             </div>
         </section>
+    </div>
+    <div class="refund">
+        <p class="money-back">30 Days Money Back Guarantee</p>
+        <p class="unconditional">If you are not satisfied with the services offered, we will
+            refund your money. Unconditional!</p>
+        <p class="last-btn"><button class="get-started-btn">Get Started</button></p>
     </div>
     <div class="container">
-        <div class="refund">
-            <p class="money-back">30 Days Money Back Guarantee</p>
-            <p class="unconditional">If you are not satisfied with the services offered, we will 
-                refund your money. Unconditional!</p>
-            <p class="last-btn"><button class="get-started-btn">Get Started</button></p>
-        </div>
-    </div>
-    <div class="container footer-adjustment">
         <section class="footer">
-        <div>
-        <img class="footer-logo" src="./images/footerlogo.svg" alt="">
-        </div>
-        <div>
-            <img class="youtube-logo" src="./images/Group 27.svg" alt="">
-        </div>
-        <div>
-            <img class="twitter-logo" src="./images/Vector (1).svg" alt="">
-        </div>
-        <div>
-            <img class="instagram-logo" src="./images/Group 28.svg" alt="">
-        </div>
-        <div>
-            <img class="fb-logo" src="./images/fb icon.svg" alt="">
-        </div>
-        <div class="input-field">
-            <p class="signup">Sign up Newsletter</p>
-            <div class="email-submit">
-            <input class="email" type="email" placeholder="Enter Email"></input>
-            <button class="submit">Submit</button>
+            <div class="footer-image-section">
+                <div>
+                    <img src="./images/footerlogo.svg" alt="">
+                </div>
+                <div class="footer-logo">
+                    <div><img class="footer-img" src="./images/Group 27.svg" alt=""></div>
+                    <div><img class="footer-img" src="./images/Vector (1).svg" alt=""></div>
+                    <div><img class="footer-img" src="./images/Group 28.svg" alt=""></div>
+                    <div><img class="footer-img" src="./images/fb icon.svg" alt=""></div>
+                </div>
             </div>
-        </div>
+
+            <div class="input-field">
+                <p class="signup">Sign up Newsletter</p>
+                <div class="email-submit">
+                    <input class="email" type="email" placeholder="Enter Email"></input>
+                    <button class="submit">Submit</button>
+                </div>
+            </div>
         </section>
     </div>
+
 </body>
 
 </html>
