--- a/Project/index.html
+++ b/Project/index.html
@@ -15,7 +15,8 @@
     <div class="container">
         <nav class="navigate">
             <ul class="header-logo-section">
-                <li class="navigate"><img src="./images/logo.svg" alt="logo"></li>
+                <li class="proudcloud-logo"><img src="./images/prdlogo.svg" alt=""></li>
+                <li class="navigate-logo"><img src="./images/logo.svg" alt="logo"></li>
                 <li class="navigation">Domain</li>
                 <li class="navigation">Hosting</li>
                 <li class="navigation">Website</li>
@@ -25,6 +26,7 @@
             <ul class="header-signin-section">
                 <li><img class="cart" src="./images/nav-cart.svg" alt="cart"></li>
                 <li><button class="btn">Sign in</button></li>
+                <li><img class="menu-btn" src="./images/menu.svg" alt="menu"></li>
             </ul>
         </nav>
     </div>
@@ -132,7 +134,7 @@
     <div class="container">
         <section>
             <div class="heading-3">
-                <div class="page">
+                <div class="page paging">
                     <img class="img-3" src="./images/parallel.svg" alt="">
                     <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus
                         scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl.
@@ -146,7 +148,7 @@
                         Sed sit cursus vulputate dignissim. </p>
                     <p class="cstm-name">Joel Miller</p>
                 </div>
-                <div class="page">
+                <div class="page paging">
                     <img class="img-3" src="./images/parallel.svg" alt="">
                     <p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu, bibendum purus
                         scelerisque ipsum id. Fringilla ipsum elementum aliquam aliquam sed duis feugiat molestie nisl.
@@ -168,7 +170,7 @@
     <div class="container">
         <section class="footer">
             <div class="footer-image-section">
-                <div>
+                <div class="footer-logo-img">
                     <img src="./images/footerlogo.svg" alt="">
                 </div>
                 <div class="footer-logo">
